glx/testdata/invalid/place-missing-name.glx
# Invalid: Missing required 'name' field
places:
  place-12345678:
    type: city
